infra/kubernetes/wz.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wzcomparerr2server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wzcomparerr2server
  template:
    metadata:
      labels:
        app: wzcomparerr2server
    spec:
      containers:
        - name: wzcomparerr2server
          image: 540566440182.dkr.ecr.ap-northeast-2.amazonaws.com/wzcomparerr2server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7209
          volumeMounts:
            - name: data-volume
              mountPath: /app/Data
        - name: ubuntu
          image: ubuntu
          command: ["/bin/bash"]
          stdin: true
          tty: true
          volumeMounts:
            - name: data-volume
              mountPath: /app/Data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: wz-pvc
