infra/kubernetes/service-entry-nexon.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: avatar-maplestory-nexon
spec:
  hosts:
  - avatar.maplestory.nexon.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
